fix(scss): removed padding from form-group breakpoints due to alignment issues
THIN-12874

--- a/scss/os/_utils.scss
+++ b/scss/os/_utils.scss
@@ -302,12 +302,10 @@
       .form-group {
         flex-wrap: wrap;
 
-        // Make all columns 100% and no padding
+        // Make all columns 100%
         %full-columns {
           flex-basis: 100%;
           max-width: 100%;
-          padding-left: 0;
-          padding-right: 0;
         }
 
         %no-margin-left {
